# singularity-search-

./: .gitignore  LICENSE  METHODS.md  PAPER_CLAIMS.md  README.md  REFERENCE.md  pyproject.toml
.github/workflows/: tests.yml
docs/: beir_evaluation_checklist.md  live_map_protocol.md  research_protocol.md
examples/: classical_demo.py  map_beir.py  quantum_grover_demo.py
experiments/: README.md  evaluate_beir.py
reports/: README.md
scripts/: README.md  run_scifact_bge.sh  run_scifact_diagnostic.sh
singularity_search/: __init__.py  cli.py
singularity_search/classical/: __init__.py  graph.py  ocsd.py
singularity_search/evaluation/: NOTES.md  __init__.py  beir_io.py  bm25.py  encoders.py  metrics.py  runner.py
singularity_search/maps/: __init__.py  layout.py  palette.py  telemetry.py  viewer.py
singularity_search/quantum/: __init__.py  grover.py  oracle_from_scores.py  qpy_io.py
singularity_search/utils/: __init__.py  math_ops.py
tests/: test_beir_io_filter.py  test_bm25.py  test_classical.py  test_cli_parser.py  test_encoders.py  test_evaluation_baselines.py  test_evaluation_metrics.py  test_experiment_import.py  test_optional_dense_encoder.py  test_quantum_optional.py  test_report_writer.py  test_resampling_stats.py
