[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "singularity-search"
version = "0.1.0"
description = "Origin-Coupled Spectral Diffusion Search with a Qiskit quantum proof-of-concept."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Godson Johnson"}]
dependencies = [
  "numpy>=1.24",
]

[project.optional-dependencies]
quantum = [
  "qiskit>=2.0",
  "qiskit-aer>=0.15",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[project.scripts]
singularity-search = "singularity_search.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["singularity_search*"]

[tool.ruff]
line-length = 100
target-version = "py310"
